static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Londrina+Shadow&family=Montserrat&family=Pacifico&family=Poiret+One&family=Raleway&family=Ribeye+Marrow&display=swap');

body {
    text-align: center;
    /* font-family: "Raleway", sans-serif; */
}

/* --------------- NAVBAR --------------- */
.nav-bar {
    color: #fafafa;
    background-color: #555555;
    border-bottom: 4px dotted #fafafa;
}

.movie-journal-icon {
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    letter-spacing: 1px;
}


/* --------------- BACKGROUNDS & IMAGES --------------- */
.home-header-bg {
    background-image: url("../images/home-bg.png");
    min-height: 75vh;
    background-size: cover;
}


.pages-header-bg {
    background-image: url("../images/header.png");
    min-height: 10vhvh;
    background-size: cover;
}

.div-bg {
    background-image: url("../images/div-bg.jpg");
    background-repeat: repeat;
    background-size: 200px;
}

.movie-card-display {
    background-image: url("../images/card-bg.png");
    background-size: cover;
    margin: 5px 0;
}

/* --------------- HEADERS --------------- */
.home-header {
    margin: 30px;
    color: #fafafa;
    text-shadow: 4px -4px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 10rem;
    letter-spacing: 10px;
}

.pages-header {
    margin: 10px;
    color: #fafafa;
    text-shadow: 2px -2px 2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 3rem;
    letter-spacing: 5px;
    text-align: right;
}




/* --------------- DISPLAY MOVIES CARDS --------------- */
.trailer-link {
    color: gold;
}

.trailer-link:hover {
  color: orange;
}

.main-bg {
    background-color: orange;
}

.flashes {
    color: green;
    padding: 30px;
}

.form-login {
    margin-top: 45px;
    padding: 30px;
}

.form-login a {
    color: darkgoldenrod;
    text-decoration: none;
}

.form-login a:hover {
    font-size: 110%;
}

.form-icon {
    color: orange;
}

/* --------------- MOVIE MODALS --------------- */
.movie-modal {
    padding: 20px;
}

.card-header {
    padding: 2px;
    margin-bottom: 10px;
    background-color: transparent;
    border-bottom: none;
}

.edit-delete-btn {
    padding: 2px;
    width: 40px;
    font-size: 60%;
}

.movie-modal-row {
    padding: 20px;
}

.movie-synopsis {
    max-lines: 2;
}

.movie-modal-title {
    color: orange;
    padding: 30px 0;
}

.info-modal {
    background-color: sandybrown;
    border-radius: 10px;
}

.modal-img {
    min-width: 100px;
    min-height: 100px;
}

.watch-lists-collapse {
    width: 100%;
    color: orange;
}

.reviews-title {
    margin: 30px auto;
    text-align: center;
    max-width: 600px;
    position: relative;
}

/* --------------- SHOW MORE/LESS --------------- */
.comment {
    padding-bottom: 0;
    margin: 5px;
    transition: all 0.2s;
    margin: 0 auto;
}

a.morelink {
	text-decoration:none;
    outline: none;
    color: seagreen;
}

.morecontent span {
	display: none;
}



.btn-submit-review {
    margin-top: 5px;
}

/* .reviews-title:before {
    content: "";
    display: block;
    width: 120px;
    height: 2px;
    background: orange;
    position: absolute;
    left: 0;
    top: 50%;
    z-index: -5;
}

.reviews-title:after {
    content: "";
    display: block;
    width: 120px;
    height: 2px;
    background: orange;
    position: absolute;
    right: 0;
    top: 50%;
    z-index: -5;
}

.span {
    background: white;
} */

.comment-section {
    padding: 20px 0;
}

.comment-text {
    padding-top: 24px;
}

.comment-footer {
    color: grey;
}

/* --------------- ADD & EDIT REVIEW PAGES --------------- */

.review-form{
    background-color: #3D3737;
    border-radius: 0.5rem;
    padding: 10px;
    color: #fafafa;
}



/* --------------- MEDIA QUERIES --------------- */

/* Media queries for extra small devices */
@media only screen and (max-width: 600px) {
    body {
        font-size: 90%;
    }
    .review-form{
        padding: 4px;
    }
    .home-header {
        margin: 50px 0;
        font-size: 4.5rem;
        letter-spacing: 5px;
    }
}

/* Media queries for small devices */
@media only screen and (min-width: 600px) {
    .card-body {
        padding: 0.3;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {

}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {

}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    
}

